# alice2_RC10

./: .gitattributes  .gitignore  readme.md
alice2/: CMakeLists.txt  build.bat  run.bat
alice2/include/: alice2.h
alice2/src/computeGeom/: ComputeGraph.cpp  ComputeGraph.h  ComputeMesh.cpp  ComputeMesh.h  ScalarField3D.cpp  ScalarField3D.h  scalarField.cpp  scalarField.h
alice2/src/core/: Application.cpp  Application.h  Camera.cpp  Camera.h  FontRenderer.cpp  FontRenderer.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  Transform.cpp  Transform.h
alice2/src/input/: CameraController.cpp  CameraController.h  InputManager.h
alice2/src/objects/: GraphObject.cpp  GraphObject.h  MeshObject.cpp  MeshObject.h  PrimitiveObject.cpp  PrimitiveObject.h  SceneObject.cpp  SceneObject.h  ZSpaceObject.cpp  ZSpaceObject.h
alice2/src/sketches/: ISketch.h  SketchManager.cpp  SketchManager.h  SketchRegistry.h
alice2/src/ui/: SimpleUI.cpp  SimpleUI.h
alice2/src/utils/: Math.h  MathUtils.h  Matrix.h  OpenGL.h  Quaternion.h  Vector.h
alice2/userSrc/: sketch_session_1.cpp  sketch_session_2.cpp  sketch_session_2_tower.cpp
alice2/userSrc/example/: sketch_empty.cpp  sketch_example.cpp
